# who-should-be-fined

./: .gitignore  .gitmodules  Vagrantfile
FastOT/: Makefile  Receiver_Secret.txt  Receiver_input.txt  Receiver_output.txt  Sender_Secret.txt  Sender_input.txt  ge25519_lookup_niels.s  ge25519_p1p1_to_p2.s  ge25519_p1p1_to_p3.s  ge4x_add_p1p1.s  ge4x_double_p1p1.s  ge4x_lookup.s  ge4x_lookup_niels.s  ge4x_niels_add_p1p1.s  gfe4x_mul.s  gfe4x_square.s  ot_config.h  ot_receiver_for_AES  ot_receiver_for_AES.c  ot_sender_for_AES  ot_sender_for_AES.c
MatchTest/: .gitignore  A+B-C.txt  A+B.txt  A.txt  AB.txt  generate-input-alloc.sh  generate-input-ot.sh  generate-input.sh  get-plot-input-collusion-alloc.sh  get-plot-input-collusion-ot.sh  get-plot-input-sender.sh  get-plot-input-single-leaker.sh  get-plot-input.sh  identification-collusion-alloc.sh  identification-collusion-ot.sh  identification-collusion-ratio.sh  input-gen-alloc.py  input-gen.py  sender-leakage-input-gen.py  sender-ot.txt  simulate-collusion-alloc.sh  simulate-collusion-ot.sh  simulate-collusion-ratio.sh  single-alloc-ot.txt  single-leaker-input-gen.py  test-collusion-ot.py  test.py  test.txt  testtest.txt
MatchTest/collusion-alloc-result/: 910199+901199  911099  different_alloc_all.m  different_alloc_result.m  plot-alloc.py
MatchTest/collusion-result/: 111111  (+10 more)
datasets/: extend.py
src/: CMakeLists.txt  crypto-helper-test.cpp  crypto-helper.cpp  crypto-helper.hpp  file-handler-test.cpp  file-handler.cpp  file-handler.hpp  isaac.cpp  isaac.hpp  ledger.cpp  ledger.hpp  main.cpp  record.cpp  record.hpp
(+852 files in other folders)
